# py4xml

./: .gitignore  Demo XML.py  LICENSE  README.md  XML 1.xml  main.py  py4xml.py  py_xml.py  setup.cfg  test 1.py  xml_rectifier.py
Tests/: XML 1.xml  XML 2.xml  XML 3.xml  XML 4.xml  csv 1.csv
src/py4xml/: __init__.py  py4xml.py
src/py4xml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
