[metadata]
name = py4xml
version = 0.1
author = Ankit Aggarwal
author_email = ankitaggarwal200515@gmail.com
description = A python package to read, write or interpret the XML files. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MasterANK/py4xml
project_urls =
    Bug Tracker = https://github.com/MasterANK/py4xml/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: XML

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    Tests*